# zargar

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_developer_tasks.py
backend/app/: __init__.py  cli.py  config.py  db.py  main.py
backend/app/agents/: __init__.py  bottleneck_agent.py  developer_agent.py  founder_report_agent.py  memory_qa_agent.py  sop_agent.py
backend/app/api/: __init__.py  agents.py  bot.py  companies.py  context.py  processing.py  telegram_import.py
backend/app/bot/: telegram_owner_bot.py
backend/app/embeddings/: base.py  provider.py
backend/app/ingestion/: telegram_export_parser.py
backend/app/llm/: base.py  openai_provider.py  prompts.py  schemas.py  validation.py
backend/app/memory/: community_service.py  context_constructor.py  context_retriever.py  entity_extractor.py  entity_resolver.py  episode_service.py  fact_extractor.py  fact_resolver.py  temporal_resolver.py
backend/app/models/: __init__.py  db_models.py  types.py  vector.py
backend/app/schemas/: __init__.py  (+1 more)
backend/seed/: demo_telegram_export.json
backend/tests/: test_business_relevance_gate.py  test_cli_commands.py  test_config.py  test_context_search.py  test_context_window.py  test_developer_agent.py  test_extraction_validation.py  test_llm_validation.py  test_local_workspace_executor.py  test_memory_qa_filtering.py  test_processing_controls.py  test_report_agents.py  test_telegram_export_parser.py  test_telegram_owner_bot.py  test_vertical_slice.py
(+9 files in other folders)
