[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zargar-backend"
version = "0.1.0"
description = "Telegram-first temporal business memory layer"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.111",
  "httpx>=0.27",
  "pydantic-settings>=2.2",
  "psycopg[binary]>=3.1",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[project.scripts]
zargar = "app.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]
bot = [
  "aiogram>=3.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "seed*", "tests*", "docs*"]
